<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F9FD"
    android:layoutDirection="locale"
    android:textDirection="locale"
    tools:context=".carlist.CarListActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/toolbar_background"
        app:navigationIcon="@drawable/ic_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/cars_machines"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/filter_view"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_filter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_filter"
                android:gravity="start|center_vertical"
                android:text="@string/filter"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D3D8DB" />

            <TextView
                android:id="@+id/btn_sort"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_sort"
                android:gravity="start|center_vertical"
                android:text="@string/sort"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D3D8DB" />

            <TextView
                android:id="@+id/btn_grid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_grid"
                android:gravity="start|center_vertical"
                android:text="@string/grid_view"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tv_scroll_to_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/scroll_to_refresh"
        android:textColor="#D3D8DB"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/filter_view" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_scroll_to_search">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_car_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/prgress_bar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintGuide_percent="0.5" />
</android.support.constraint.ConstraintLayout>